WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2006-12-01


Version 0.2.2 (under dev!):
   * plugins: "add_message_handler" now accepts "*" for all IRC messages
   * added keys (F9/F10) to scroll topic (task #6030)
   * added auto completion with channels and filenames (task #5423)
   * fixed memleak in keyboard input
   * fixed refresh bug when changing config options if window is splited
   * added space between chat and nicklist when position is "right" (bug #17852)
   * added option "look_nicklist_separator" (task #5437)
   * fixed bug with DCC SEND when filename begins with '~'
   * added "irc_send_unknown_commands" option to send unknown commands to
     IRC server (OFF by default) (task #5947)
   * /charset command and charset conversions now made by "charset" plugin
   * fixed display bug in status bar, wrong length when using UTF-8
   * fixed bug with ignore: now any IRC command is allowed
   * fixed crash with Ctrl-T (transpose) and one char on line (bug #18153)
   * added filename completion (task #5425)
   * added "modifier" in plugins API
   * improved /plugin command
   * fixed bug on ignore with "mode" IRC command (bug #18058)
   * fixed crash when loading ruby script if file does not exist, with
     Ruby >= 1.9 only (bug #18064)
   * added date in plugin function get_buffer_data()
   * fixed some portability bugs (patch #5271)
   * fixed iconv detection for BSD (patch #5456)
   * fixed typo in configure.in (bash specific test) (patch #5450)
   * mode changes with /op, /deop, /voice, /devoice, /halfop, /dehalfop are
     now sent in one mode command to server (task #5968)
   * added more values for config boolean values: y/true/t/1 and n/false/f/0
   * fixed bug with /alias and arguments (like $1), now text after
     argument(s) is used (bug #17944)
   * fixed minor display bug with special chars on some arch like PPC

Version 0.2.1 (2006-10-01):