@@ -1,10 +1,11 @@
 WeeChat - Wee Enhanced Environment for Chat
 ===========================================
 
-ChangeLog - 2006-12-01
+ChangeLog - 2006-12-04
 
 
 Version 0.2.2 (under dev!):
+   * fixed bug with "set_config" function in plugins API (bug #18448)
    * plugins: "add_message_handler" now accepts "*" for all IRC messages
    * added keys (F9/F10) to scroll topic (task #6030)
    * added auto completion with channels and filenames (task #5423)
